# game-store

./: .gitignore
backend/: .env.template  .gitignore  authFunc.py  config.py  databaseFunction.py  main.py  pyproject.toml  test.py
backend/models/: database.py  product.py  user.py
backend/repository/: abstract_repo.py  product_repository.py  user_repository.py
backend/schemas/: product.py  token.py  user.py
backend/services/: auth.py  product.py  token.py  user.py
backend/web/routes/: dependencies.py  product.py  user.py
frontend/: .prettierrc  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: main.ts
frontend/src/components/: AddGame.vue  Card.vue  Home.vue  ItemOfSidebar.vue  Login.vue  Main.vue  Products.vue  Registration.vue  ShoppingCart.vue  SideNavbar.vue  Toast.vue
frontend/src/router/: router.ts
frontend/src/services/: auth.ts
frontend/src/stores/: gameStore.ts
